[package]
name = "qrupi_crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pqcrypto-kyber = "0.7.2"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3"
hex = "0.4"
x25519-dalek = "2.0"
sha3 = "0.10"
rand_core = "0.6"
rand = "0.8"

