[package]
name = "qrupi_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Post-Quantum Cryptography (Kyber + Dilithium)
pqcrypto-kyber = "0.7.2"
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3"

# Classical Cryptography (ECDH, hashing, randomness)
x25519-dalek = "2.0"
sha3 = "0.10"
rand_core = "0.6"
rand = "0.8"
hex = "0.4"

# Fully Homomorphic Encryption (FHE)
tfhe = { version = "1.3.1", features = ["shortint"] }
dialoguer = "0.11"








